feat(web): make report payment inputs configurable
